fix(responsiveness): correct layout issue on About Us page caused by incorrect CSS inclusion
Removed an incorrectly included CSS file that caused the entire About Us page to be displayed in a column layout, affecting responsiveness. This change fixes the layout issue. Also, integrated Thymeleaf templates for newly added pages and added corresponding route handling in 'PageController'.

--- a/src/main/resources/static/css/card.css
+++ b/src/main/resources/static/css/card.css
@@ -9,18 +9,18 @@ body {
   height: 100vh;
   font-family: "Arial";
   gap:16px;
-  background-image: url("/imgcabeçalho/Banner.jpeg")
+  background-image: url(../img/Banner.jpeg)
 }
 .card {
   background-color: #fff;
-  width: 200px;
-  height: 260px;
+  width: 250px;
+  height: 301px;
   border-radius: 12px;
   box-shadow: 4px 4px 12px #000000;
 }
 .card img {
   width: 100%;
-  height: 140px;
+  height: 150px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
@@ -29,8 +29,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 4px;
-  height: 50%;
+  gap: 6px;
+  height: 45%;
 }
 .card h1 {
   font-size: 1.2rem;
